# Ivy

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: IvyConfig.cmake.in
docs/: architecture-note.md  migration-log.md
examples/: sample_app.cpp
examples/external_consumer/: CMakeLists.txt  main.cpp
fuzz/: parser_fuzz.cpp
include/ivy/: ast.hpp  errors.hpp  parser.hpp  pretty_printer.hpp  type_checker.hpp  verifier.hpp  z3_compat.hpp  z3_interpreter.hpp
scripts/: benchmark_corpus.py  coverage_gate.py  determinism_check.py  parity_check.py  run_corpus.py  run_parser_fuzz.sh
src/: ast.cpp  main.cpp  parser.cpp  pretty_printer.cpp  type_checker.cpp  verifier.cpp  z3_interpreter.cpp
tests/: test_branch_coverage.cpp  test_parser.cpp  test_typechecker.cpp  test_utils.cpp  test_utils.hpp  test_verifier.cpp
